--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.5",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
