--- a/app.json
+++ b/app.json
@@ -11,19 +11,17 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.estebamg.tenisapp"
+      "bundleIdentifier": "com.tennis.radrrr"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.estebamg.tenisapp"
+      "package": "com.tennis.radrrr"
     },
     "web": {
       "favicon": "./assets/favicon.png"
