--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,12 @@
     "production": {}
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "stecoopbren@gmail.com",
+        "ascAppId": "6472619018",
+        "appleTeamId": "J62FURYSSF"
+      }
+    }
   }
 }
