--- a/package.json
+++ b/package.json
@@ -11,25 +11,25 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.4",
-    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react-redux": "^7.1.25",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "^49.0.18",
-    "expo-av": "~13.2.1",
-    "expo-status-bar": "~1.4.4",
+    "expo-av": "~13.4.1",
+    "expo-status-bar": "~1.6.0",
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.5",
     "react-native-paper": "^5.11.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.1",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
@@ -42,7 +42,7 @@
     "@babel/core": "^7.20.0",
     "@types/expo": "^33.0.1",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/react": "^18.2.17",
+    "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.2",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "eslint": "^8.45.0",
@@ -50,7 +50,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.0.0",
     "react-native-svg-transformer": "^1.1.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
