--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,10 @@
     "skipLibCheck": true,
     "baseUrl": "./src",
     "paths": {
-      "~/*": [
-        "*"
-      ]
+      "~/*": ["*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
-  "extends": "expo/tsconfig.base",
+  "extends": "expo/tsconfig.base"
 }
