--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
-    "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react-redux": "^7.1.25",
@@ -24,6 +24,7 @@
     "formik": "^2.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lottie-react-native": "5.1.6",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-paper": "^5.11.1",
@@ -35,8 +36,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.5",
-    "yup": "^1.2.0",
-    "lottie-react-native": "5.1.6"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
